--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="description"
-    content="AI-powered modern todo list app. Organize tasks with workspaces, AI suggestions, calendar sync, and natural language input." />
+
+  <!-- Primary Meta Tags -->
+  <title>Yönetim Sistemi</title>
+  <meta name="title" content="Yönetim Sistemi" />
+  <meta name="description" content="by Ali Diyar DURAN" />
   <meta name="theme-color" content="#0a0a0a" />
-  <title>AI Todo List — Smart Task Management</title>
+
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://elpadre-system.vercel.app/" />
+  <meta property="og:title" content="Yönetim Sistemi" />
+  <meta property="og:description" content="by Ali Diyar DURAN" />
+  <meta property="og:image" content="/favicon.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://elpadre-system.vercel.app/" />
+  <meta property="twitter:title" content="Yönetim Sistemi" />
+  <meta property="twitter:description" content="by Ali Diyar DURAN" />
+  <meta property="twitter:image" content="/favicon.svg" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
