feat(finance): add multi-currency dashboard, edit recurring, and number formatting

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <meta name="description" content="by Ali Diyar DURAN" />
   <meta name="theme-color" content="#0a0a0a" />
 
+  <!-- Language / Translation settings -->
+  <meta name="google" content="notranslate" />
+  <meta http-equiv="Content-Language" content="tr" />
+
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://elpadre-system.vercel.app/" />
